--- a/box-model.html
+++ b/box-model.html
@@ -4,7 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="styles/index-style.css" />
+		<!-- box-model-style css -->
+		<link rel="stylesheet" href="styles/box-model-style.css" />
+		<link rel="stylesheet" href="styles/main.css" />
+
+		<!-- font-awesome -->
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -127,15 +131,15 @@
 				</section>
 
 				<section>
-					<div class="text-left">
+					<div>
 						<h1 class="supertitle2 text-centered">HEADINGS</h1>
-						<div style="width: 250px; margin: 20px auto; padding: 10px">
-							<h1 id="h1" class="pad1 mar1">Heading1</h1>
-							<h2 id="h2" class="pad1 mar1">Heading2</h2>
-							<h3 id="h3" class="pad1 mar1">Heading3</h3>
-							<h4 id="h4" class="pad1 mar1">Heading4</h4>
-							<h5 id="h5" class="pad1 mar1">Heading5</h5>
-							<h6 id="h6" class="pad1 mar1">Heading6</h6>
+						<div class="headings">
+							<h1 class="transition03 pad1 mar1">Heading1</h1>
+							<h2 class="transition03 pad1 mar1">Heading2</h2>
+							<h3 class="transition03 pad1 mar1">Heading3</h3>
+							<h4 class="transition03 pad1 mar1">Heading4</h4>
+							<h5 class="transition03 pad1 mar1">Heading5</h5>
+							<h6 class="transition03 pad1 mar1">Heading6</h6>
 						</div>
 					</div>
 				</section>
