--- a/index.html
+++ b/index.html
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-		/>
-		<link rel="stylesheet" href="styles/index-style.css" />
-		<title>Octavio Frangipani</title>
-	</head>
-	<body class="bgc-petrol">
-		<script src="scripts/header.js"></script>
-		<main class="bgc-petrol main-container">
-		
-			<section class="container-flex-index">
-				<article class="container">
-					<a class="no-txt-dec" href="cv.html"
-						><div>
-							<h1>CV</h1>
-							<h4>Curriculum Vitae</h4>
-						</div></a
-					>
-				</article>
-				<article class="container">
-					<a class="no-txt-dec" href="box-model.html"
-						><div>
-							<h1>The Box Model</h1>
-							<h4>Practice</h4>
-						</div></a
-					>
-				</article>
-				
-				<article class="container">
-					<a class="no-txt-dec" href="notes.html"
-						><div>
-							<h1>Notes</h1>
-							<h4>Web Dev Notes</h4>
-						</div></a
-					>
-				</article>
-				<article class="container">
-					<a class="no-txt-dec" target="_blank" rel="noopener noreferrer" href="https://proshop-app-177.herokuapp.com/"
-						><div><a href="http://" ></a>
-							<h1>Proshop</h1>
-							<h4>MERN Project</h4>
-						</div></a
-					>
-				</article>
-			</section>
-		</main>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<!-- font-awesome -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" />
+	<!-- ScrollReveal -->
+	<script src="https://unpkg.com/scrollreveal"></script>
+	<!-- my Css -->
+	<link rel="stylesheet" href="styles/index-style.css" />
+	<link rel="stylesheet" href="styles/main.css">
+	<title>Octavio Frangipani</title>
+</head>
+
+<body class="bgc-petrol">
+	<script src="scripts/header.js"></script>
+	<main class="bgc-petrol main-container">
+
+		<section class="container-flex-index">
+			<article class="container">
+				<a class="no-txt-dec" href="cv.html">
+					<div>
+						<h1>CV</h1>
+						<h4>Curriculum Vitae</h4>
+					</div>
+				</a>
+			</article>
+			<article class="container">
+				<a class="no-txt-dec" href="box-model.html">
+					<div>
+						<h1>The Box Model</h1>
+						<h4>Practice</h4>
+					</div>
+				</a>
+			</article>
+
+			<article class="container">
+				<a class="no-txt-dec" href="notes.html">
+					<div>
+						<h1>Notes</h1>
+						<h4>Web Dev Notes</h4>
+					</div>
+				</a>
+			</article>
+			<article class="container">
+				<a class="no-txt-dec" target="_blank" rel="noopener noreferrer"
+					href="https://proshop-app-177.herokuapp.com/">
+					<div><a href="http://"></a>
+						<h1>Proshop</h1>
+						<h4>MERN Project</h4>
+					</div>
+				</a>
+			</article>
+		</section>
+	</main>
 	</div>
 	<script src="scripts/footer.js"></script>
-	</body>
+	<script src="scripts/index-app.js"></script>
+
+</body>
+
 </html>
