--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" href="styles/cv-style.css" />
 		<link rel="stylesheet" href="styles/main.css" />
 		<!-- ScrollReveal -->
-		<script src="https://unpkg.com/scrollreveal"></script>
+		<!-- <script src="https://unpkg.com/scrollreveal"></script> -->
 		<!-- meta tags -->
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
