--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<!-- my Css -->
 	<link rel="stylesheet" href="styles/index-style.css" />
 	<link rel="stylesheet" href="styles/main.css">
+	<!-- <link rel="stylesheet" href="styles/debugg.css"> -->
 	<title>Octavio Frangipani</title>
 </head>
 
@@ -21,37 +22,40 @@
 
 		<section class="container-flex-index">
 			<article class="container">
-				<a class="no-txt-dec" href="cv.html">
-					<div>
-						<h1>CV</h1>
-						<h4>Curriculum Vitae</h4>
-					</div>
+				<a href="cv.html">
+					<h1>CV</h1>
+					<h4>Curriculum Vitae</h4>
 				</a>
 			</article>
 			<article class="container">
-				<a class="no-txt-dec" href="box-model.html">
-					<div>
-						<h1>The Box Model</h1>
-						<h4>Practice</h4>
-					</div>
+				<a href="box-model.html">
+					<h1>The Box Model</h1>
+					<h4>Practice</h4>
 				</a>
 			</article>
 
 			<article class="container">
-				<a class="no-txt-dec" href="notes.html">
-					<div>
-						<h1>Notes</h1>
-						<h4>Web Dev Notes</h4>
-					</div>
+				<a href="notes.html">
+					<h1>Notes</h1>
+					<h4>Web Dev Notes</h4>
 				</a>
 			</article>
 			<article class="container">
-				<a class="no-txt-dec" target="_blank" rel="noopener noreferrer"
-					href="https://proshop-app-177.herokuapp.com/">
-					<div><a href="http://"></a>
-						<h1>Proshop</h1>
-						<h4>MERN Project</h4>
-					</div>
+				<a target="_blank" rel="noopener noreferrer" href="https://proshop-app-177.herokuapp.com/">
+					<h1>Proshop</h1>
+					<h4>MERN Project</h4>
+				</a>
+			</article>
+			<article class="container">
+				<a href="tech-news.html">
+					<h1>TechNews</h1>
+					<h4>HTML - CSS project</h4>
+				</a>
+			</article>
+			<article class="container">
+				<a href="pictures-grid.html">
+					<h1>Pictures Grid</h1>
+					<h4>HTML - CSS project</h4>
 				</a>
 			</article>
 		</section>
