--- a/tech-news.html
+++ b/tech-news.html
@@ -20,9 +20,12 @@
 			rel="stylesheet"
 		/>
 		<!-- CUSTOM CSS -->
-		<link rel="stylesheet" href="tech-news-style.css" />
+		<link rel="stylesheet" href="styles/tech-news-style.css" />
+		<link rel="stylesheet" href="styles/main.css" />
 	</head>
-	<body class="container">
+
+	<body>
+		<script src="scripts/header.js"></script>
 		<header id="menu">
 			<nav class="nav-main">
 				<img class="nav-brand" src="images/brand.png" alt="brand" />
@@ -188,7 +191,7 @@
 				</ul>
 			</section>
 		</main>
-		<footer class="footer">
+		<footer class="footer-tech">
 			<article class="footer-flex">
 				<ul>
 					<li>Title One</li>
@@ -231,9 +234,9 @@
 					<li><a href="#">More</a></li>
 				</ul>
 			</article>
-			<small class="copyright">TechNews CopyRight</small>
+			<small class="copyright-tech">TechNews CopyRight</small>
 		</footer>
 
-		<script src="tech-news-script.js"></script>
+		<script src="scripts/tech-news-script.js"></script>
 	</body>
 </html>
