--- a/pictures-grid.html
+++ b/pictures-grid.html
@@ -22,108 +22,72 @@
 		<script src="scripts/header.js"></script>
 		<main>
 			<section class="grid-container">
+				<img src="images/bote.jpg" alt="bote" class="grid-item bote" />
 				<img
-					src="images/new/Paisajes/bote.jpg"
-					alt="bote"
-					class="grid-item bote"
-				/>
-				<img
-					src="images/new/Paisajes/flamenco.jpg"
+					src="images/flamenco.jpg"
 					alt="flamenco"
 					class="grid-item flamenco"
 				/>
 				<img
-					src="images/new/Paisajes/flor-de-piedra.jpg"
+					src="images/flor-de-piedra.jpg"
 					alt="flor de piedra"
 					class="grid-item flor-de-piedra"
 				/>
 				<img
-					src="images/new/Paisajes/isla-del-sol.jpg"
+					src="images/isla-del-sol.jpg"
 					alt="isla del sol"
 					class="grid-item isla-del-sol"
 				/>
 				<img
-					src="images/new/Paisajes/isla-del-sol2.jpg"
+					src="images/isla-del-sol2.jpg"
 					alt="isla del sol"
 					class="grid-item isla-del-sol2"
 				/>
 				<img
-					src="images/new/Paisajes/laguna-colorada.jpg"
+					src="images/laguna-colorada.jpg"
 					alt="laguna colorada"
 					class="grid-item laguna-colorada"
 				/>
 				<img
-					src="images/new/Paisajes/laguna-colorada2.jpg"
+					src="images/laguna-colorada2.jpg"
 					alt="laguna colorada"
 					class="grid-item laguna-colorada2"
 				/>
 				<img
-					src="images/new/Paisajes/machu-pichu.jpg"
+					src="images/machu-pichu.jpg"
 					alt="machu pichu"
 					class="grid-item machu-pichu"
 				/>
+				<img src="images/ruinas.jpg" alt="ruinas" class="grid-item ruinas" />
+				<img src="images/selva.jpg" alt="selva" class="grid-item selva" />
+				<img src="images/vias.jpg" alt="vias" class="grid-item vias" />
 				<img
-					src="images/new/Paisajes/ruinas.jpg"
-					alt="ruinas"
-					class="grid-item ruinas"
-				/>
-				<img
-					src="images/new/Paisajes/selva.jpg"
-					alt="selva"
-					class="grid-item selva"
-				/>
-				<img
-					src="images/new/Paisajes/vias.jpg"
-					alt="vias"
-					class="grid-item vias"
-				/>
-				<img
-					src="images/new/Paisajes/botanico.jpg"
+					src="images/botanico.jpg"
 					alt="botanico"
 					class="grid-item botanico"
 				/>
 				<img
-					src="images/new/Paisajes/posilipo.jpg"
+					src="images/posilipo.jpg"
 					alt="posilipo"
 					class="grid-item posilipo"
 				/>
+				<img src="images/arco.jpg" alt="arco" class="grid-item arco" />
+				<img src="images/w1.jpg" alt="hotelw" class="grid-item w1" />
+				<img src="images/w2.jpg" alt="hotelw" class="grid-item w2" />
+				<img src="images/sagrada.jpg" alt="sagrada" class="grid-item sagrada" />
+				<img src="images/machu2.jpg" alt="machu2" class="grid-item machu2" />
 				<img
-					src="images/new/Paisajes/arco.jpg"
-					alt="arco"
-					class="grid-item arco"
-				/>
-				<img
-					src="images/new/Paisajes/w1.jpg"
-					alt="hotelw"
-					class="grid-item w1"
-				/>
-				<img
-					src="images/new/Paisajes/w2.jpg"
-					alt="hotelw"
-					class="grid-item w2"
-				/>
-				<img
-					src="images/new/Paisajes/sagrada.jpg"
-					alt="sagrada"
-					class="grid-item sagrada"
-				/>
-				<img
-					src="images/new/Paisajes/machu2.jpg"
-					alt="machu2"
-					class="grid-item machu2"
-				/>
-				<img
-					src="images/new/Paisajes/posilipo2.jpg"
+					src="images/posilipo2.jpg"
 					alt="posilipo2"
 					class="grid-item posilipo2"
 				/>
 				<img
-					src="images/new/Paisajes/thailand.jpg"
+					src="images/thailand.jpg"
 					alt="thailand"
 					class="grid-item thailand"
 				/>
 				<img
-					src="images/new/Paisajes/thailand2.jpg"
+					src="images/thailand2.jpg"
 					alt="thailand2"
 					class="grid-item thailand2"
 				/>
