--- a/index.html
+++ b/index.html
@@ -46,11 +46,19 @@
 					<h4>MERN Project</h4>
 				</a>
 			</article>
-			<article class="container">
-				<a href="tech-news.html">
-					<h1>TechNews</h1>
-					<h4>HTML - CSS project</h4>
-				</a>
+			<article class="container display-grid ">
+				<article class="container">
+					<a href="tech-news.html">
+						<h1>TechNews</h1>
+						<h4>HTML - CSS landing</h4>
+					</a>
+				</article>
+				<article class="container">
+					<a href="tech-servicies.html">
+						<h1>TechServicies</h1>
+						<h4>HTML - CSS landing</h4>
+					</a>
+				</article>
 			</article>
 			<article class="container">
 				<a href="pictures-grid.html">
