--- a/index.html
+++ b/index.html
@@ -5,72 +5,10 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<!-- font-awesome -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" />
-	<!-- ScrollReveal -->
-	<script src="https://unpkg.com/scrollreveal"></script>
-	<!-- my Css -->
-	<link rel="stylesheet" href="styles/index-style.css" />
-	<link rel="stylesheet" href="styles/main.css">
-	<!-- <link rel="stylesheet" href="styles/debugg.css"> -->
-	<title>Octavio Frangipani</title>
+	
+	<title>Eduardo Peluffo</title>
 </head>
-
-<body class="bgc-petrol">
-	<script src="scripts/header.js"></script>
-	<main class="bgc-petrol main-container">
-
-		<section class="container-flex-index">
-			<article class="container">
-				<a href="cv.html">
-					<h1>CV</h1>
-					<h4>Curriculum Vitae</h4>
-				</a>
-			</article>
-			<article class="container">
-				<a href="box-model.html">
-					<h1>The Box Model</h1>
-					<h4>Practice</h4>
-				</a>
-			</article>
-
-			<article class="container">
-				<a href="notes.html">
-					<h1>Notes</h1>
-					<h4>Web Dev Notes</h4>
-				</a>
-			</article>
-			<article class="container">
-				<a target="_blank" rel="noopener noreferrer" href="https://proshop-app-177.herokuapp.com/">
-					<h1>Proshop</h1>
-					<h4>MERN Project</h4>
-				</a>
-			</article>
-			<article class="container display-grid ">
-				<article class="container">
-					<a href="tech-news.html">
-						<h1>TechNews</h1>
-						<h4>HTML - CSS landing</h4>
-					</a>
-				</article>
-				<article class="container">
-					<a href="tech-servicies.html">
-						<h1>TechServicies</h1>
-						<h4>HTML - CSS landing</h4>
-					</a>
-				</article>
-			</article>
-			<article class="container">
-				<a href="pictures-grid.html">
-					<h1>Pictures Grid</h1>
-					<h4>HTML - CSS project</h4>
-				</a>
-			</article>
-		</section>
-	</main>
-	</div>
-	<script src="scripts/footer.js"></script>
-	<script src="scripts/index-app.js"></script>
-
+<body>
+Hola
 </body>
 </html>
