--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 	<title>Eduardo Peluffo</title>
 </head>
 <body>
-Hola
+<div class="container">
+  <div class="row">
+    <div class="col">
+      Columna 1
+    </div>
+    <div class="col">
+      Columna 2
+    </div>
+    <div class="col">
+      Columna 3
+    </div>
+  </div>
+</div>
 </body>
 </html>
