--- a/index.html
+++ b/index.html
@@ -1,34 +1,109 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Leviatas - GitHub</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: "Inter", sans-serif;
+        margin: 0;
+        padding: 0;
+        background: #f4f4f9;
+        color: #333;
+      }
+      header {
+        background: #24292f;
+        color: white;
+        padding: 40px 20px;
+        text-align: center;
+      }
+      header h1 {
+        margin: 0;
+        font-size: 2.5em;
+      }
+      header p {
+        font-size: 1.2em;
+        margin-top: 10px;
+      }
+      main {
+        max-width: 900px;
+        margin: 40px auto;
+        padding: 0 20px;
+      }
+      h2 {
+        color: #24292f;
+        margin-top: 40px;
+      }
+      ul.projects {
+        list-style: none;
+        padding: 0;
+      }
+      ul.projects li {
+        margin-bottom: 15px;
+        background: white;
+        padding: 15px 20px;
+        border-radius: 8px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+        transition: transform 0.2s, box-shadow 0.2s;
+      }
+      ul.projects li:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      }
+      a {
+        text-decoration: none;
+        color: #0366d6;
+      }
+      footer {
+        text-align: center;
+        padding: 20px;
+        color: #666;
+        font-size: 0.9em;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-<div class="container">
-  <div class="row">
-    <div class="col">
-      Column
-    </div>
-    <div class="col">
-      Column
-    </div>
-    <div class="col">
-      Column
-    </div>
-  </div>
-</div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <header>
+      <h1>Leviatas</h1>
+      <p>
+        Desarrollador web | Apasionado por C#, JavaScript y Python | GitHub
+        Projects
+      </p>
+    </header>
+
+    <main>
+      <section>
+        <h2>Proyectos destacados</h2>
+        <ul class="projects">
+          <li>
+            <a href="https://leviatas.github.io/jsonflattenandcopy/"
+              >JSON Flatten & Copy</a
+            >
+            – Convierte JSON en inputs clave/valor para copy-paste.
+          </li>
+          <li>
+            <a href="#">Otro Proyecto</a> – Breve descripción de otro proyecto.
+          </li>
+          <li>
+            <a href="#">Proyecto de ejemplo</a> – Algo que quieras mostrar.
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Enlaces útiles</h2>
+        <ul>
+          <li><a href="https://github.com/leviatas">Mi GitHub</a></li>
+          <li><a href="mailto:levi@example.com">Contacto</a></li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>&copy; 2025 Leviatas. Todos los derechos reservados.</footer>
   </body>
 </html>
